<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:fitsSystemWindows="true"
    android:id="@+id/main_fragment"
    tools:context=".ui.fragments.FilmListFragment">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/navy_500"
        app:elevation="0dp">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:minHeight="100dp"
            app:layout_behavior="@string/appbar_scrolling_view_behavior"
            app:layout_collapseMode="pin"
            app:layout_scrollFlags="scroll|exitUntilCollapsed|enterAlwaysCollapsed"
            app:titleEnabled="false">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/buttonSettings"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:background="@color/white"
                        android:contentDescription="@string/todo"
                        android:text="@string/settings_button"
                        app:backgroundTint="@color/white"
                        app:icon="@android:drawable/ic_menu_manage"
                        tools:ignore="DuplicateSpeakableTextCheck"
                        android:layout_marginStart="@dimen/spacing_medium"/>

                    <TextView
                        android:id="@+id/textView"
                        android:layout_width="116dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="30dp"
                        android:text="@string/hello_client"
                        android:textColor="#000000"
                        android:layout_marginHorizontal="@dimen/spacing_medium"/>

                    <Button
                        android:id="@+id/buttonLogin"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:layout_marginStart="@dimen/spacing_medium"
                        android:background="@color/white"
                        android:contentDescription="@string/todo"
                        android:text="@string/login_button"
                        app:backgroundTint="@color/white"
                        app:icon="@android:drawable/ic_menu_manage" />

                </LinearLayout>



                <androidx.appcompat.widget.Toolbar
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    app:contentInsetLeft="0dp"
                    app:contentInsetStart="0dp"
                    app:elevation="0dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <androidx.appcompat.widget.SearchView
                            android:id="@+id/search"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/spacing_medium"
                            android:layout_marginBottom="@dimen/spacing_medium"
                            android:autofillHints="name"
                            android:clickable="true"
                            app:iconifiedByDefault="false"
                            app:queryHint="@string/enter_the_name_of_the_movie"
                            android:minHeight="48dp"
                            android:textColorHint="#000000" />

                        <View
                            android:layout_width="match_parent"
                            android:layout_height="32dp"
                            android:background="@drawable/list_background" />
                    </LinearLayout>
                </androidx.appcompat.widget.Toolbar>


            </LinearLayout>


        </com.google.android.material.appbar.CollapsingToolbarLayout>


    </com.google.android.material.appbar.AppBarLayout>

    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/swipeContainer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <androidx.core.widget.NestedScrollView
        android:id="@+id/nestedScrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/navy_900"
        android:overScrollMode="never"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ProgressBar
                android:id="@+id/progress_bar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:visibility="visible"/>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/navy_900"
                android:overScrollMode="never"
                android:scrollbars="vertical"
                app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
                app:layout_behavior="@string/appbar_scrolling_view_behavior"
                tools:listitem="@layout/item_film"
                tools:itemCount="4"/>

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>
</androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/floatingButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:contentDescription="@string/todo"
        android:src="@drawable/ic_action_name"
        android:layout_margin="16dp"
        android:layout_gravity="end|bottom" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>